updated input button

--- a/client/index.html
+++ b/client/index.html
@@ -34,7 +34,7 @@
       Enter your message:<br>
       <input type="text" id="chatbox" name="chatBox" placeholder="Enter your message here!">
       <!-- add send button -->
-      <input class="submit" type="submit" id="submit" name="submit">
+      <input type="submit" name="submit" class="submit" />
     </form>
     <div>
       <!-- add  optiot switch server-->
