--- a/client/index.html
+++ b/client/index.html
@@ -30,11 +30,11 @@
     <!-- update chat room name -->
     <h1>HRSF 77-78 Chat-Client</h1>
     <!--add input field to the page -->
-    <form>
+    <form class="submit">
       Enter your message:<br>
       <input type="text" id="chatbox" name="chatBox" placeholder="Enter your message here!">
       <!-- add send button -->
-      <input type="submit" name="submit" class="submit" />
+      <input type="submit" name="submit" />
     </form>
     <div>
       <!-- add  optiot switch server-->
@@ -66,7 +66,7 @@
     </div>
   </div>
   <script>
-    $('#submit .submit').on('submit', app.handleSubmit)
+    $('.submit').on('submit', app.handleSubmit)
   </script>
 </body>
 
